examples/negative/type_name_collision/duplicate_type_decl.kai
# Negative fixture (#518): declaring the same type name twice
# in one module is rejected at the second decl. Stage 2 used to
# accept silently and the typer then picked one of the two
# definitions non-deterministically, producing downstream match
# errors that named constructors from the *other* decl.

type Foo = A | B
type Foo = C | D

fn main() : Int = 0
